@@ -3,6 +3,11 @@
    Entries may not always be in chronological/commit order.
    See license at the end of file. */
 
+2025-02-09 17:06 UTC+0100 Aleksander Czajczynski (hb fki.pl)
+  * sokol/sokol_app.h
+    ! fixhack io.DeltaTime == 0.00 assertion spotted on Edge browser,
+      stopping the app, bug or machine too fast(?)
+
 2025-02-09 14:55 UTC+0100 Aleksander Czajczynski (hb fki.pl)
   * cimgui-common/hbfunc.prg
     + now also can use hash to specify unicode ranges and
